gobmkida/c3/do_find_break_chain2_efficient_moves
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_break_chain2_efficient_moves/src/engine/reading.c:4347:11: error: use of undeclared identifier 'xmmword_4A5BD0'
( __m128i)xmmword_4A5BD0))) ) 
          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_break_chain2_efficient_moves/src/engine/reading.c:4354:66: error: use of undeclared identifier 'byte_9C688C'
if ( ( v15 = v14 - 20, v16 = v13 + 20LL, v8 == ( unsigned __int8)byte_9C688C[v14]) 
                                                                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_find_break_chain2_efficient_moves/src/obj/1/reading.o] Error 1
